added images for projectile motion and vascular diseases projects

--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -66,26 +66,28 @@
         <div class="w3-row-padding">
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application.html', '', true);">
-                        <div class="more-modes w3-display-container"
-                             style="background: url('img/Projectile-Motion/blur.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />
-                                <div id="fullscreen">Fullscreen</div>
-                            </div>
+                <a
+                    href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application.html', '', true);">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Projectile-Motion/blur.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />
+                            <div id="fullscreen">Fullscreen</div>
                         </div>
-                    </a>
+                    </div>
+                </a>
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-AR.html', '', true);">
+                <a
+                    href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-AR.html', '', true);">
                     <div class="more-modes w3-display-container"
-                         style="background: url('img/Projectile-Motion/blur-ar.jpg') center;">
+                        style="background: url('img/Projectile-Motion/blur-ar.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="Augmented Reality icon"
-                                 style="width: 64px;" />
+                                style="width: 64px;" />
                             <br />
                             <div id="ar">Augmented Reality</div>
                         </div>
@@ -104,9 +106,10 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-VR.html', '', true);">
+                <a
+                    href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-VR.html', '', true);">
                     <div class="more-modes w3-display-container"
-                         style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
+                        style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />
@@ -117,18 +120,19 @@
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-hmd-1">
-                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
-                    </div>
+                <div id="warning-hmd-1">
+                    In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
+                </div>
                 </p>
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-vr">
-                        It may be necessary to accept the installation of <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
-                                                                             target="_blank">Google Virtual Reality services</a>
-                        on the first access.
-                    </div>
+                <div id="warning-vr">
+                    It may be necessary to accept the installation of <a
+                        href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                        target="_blank">Google Virtual Reality services</a>
+                    on the first access.
+                </div>
                 </p>
             </div>
 
@@ -143,7 +147,7 @@
         </div>
         <!-- End of more modes -->
 
-        <!-- <div class="w3-container w3-padding-32 ">
+        <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">
                 Images in Augmented and Virtual Reality
             </h3>
@@ -151,9 +155,10 @@
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="./img/Architecture/screenshot1-AR.jpg" onclick="openModal(1)">
-            <img class="slide " src="./img/Architecture/screenshot2-AR.jpg" onclick="openModal(2)">
-            <img class="slide " src="./img/Architecture/example-VR.jpg" onclick="openModal(3)">
+            <img class="slide " src="./img/Projectile-Motion/screenshot1-AR.png" onclick="openModal(1)">
+            <img class="slide " src="./img/Projectile-Motion/screenshot2-AR.png" onclick="openModal(2)">
+            <img class="slide " src="./img/Projectile-Motion/screenshot3-AR.png" onclick="openModal(3)">
+            <img class="slide " src="./img/Projectile-Motion/example-VR.jpg" onclick="openModal(4)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs(-1) ">&#10094;</button>
@@ -162,12 +167,15 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot1-AR.jpg"
+                <img class="slide-modal w3-display-middle" src="./img/Projectile-Motion/screenshot1-AR.png"
                     style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
+                <img class="slide-modal w3-display-middle" src="./img/Projectile-Motion/screenshot2-AR.png"
                     style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/example-VR.jpg"
+                <img class="slide-modal w3-display-middle" src="./img/Projectile-Motion/screenshot3-AR.png"
                     style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Projectile-Motion/example-VR.jpg"
+                    style="height: 100%;">
+
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
@@ -177,7 +185,7 @@
                 class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
                 onclick="closeModal()" style="cursor:pointer">×
             </span>
-        </div> -->
+        </div>
 
         <!-- End page content -->
     </div>
