--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -80,7 +80,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/vascular-diseases-application-VR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                         style="background: url('img/Vascular-Disieses/blur-vr.jpeg') center;">
+                        style="background: url('img/Vascular-Disieses/blur-vr.jpeg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />
@@ -90,18 +90,19 @@
                 </a>
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-hmd-1">
-                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
-                    </div>
+                <div id="warning-hmd-1">
+                    In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
+                </div>
                 </p>
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-vr">
-                        It may be necessary to accept the installation of <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
-                                                                             target="_blank">Google Virtual Reality services</a>
-                        on the first access.
-                    </div>
+                <div id="warning-vr">
+                    It may be necessary to accept the installation of <a
+                        href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                        target="_blank">Google Virtual Reality services</a>
+                    on the first access.
+                </div>
                 </p>
             </div>
 
@@ -109,17 +110,17 @@
 
         <!-- End of more modes -->
 
-        <!-- <div class="w3-container w3-padding-32 ">
+        <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">
-                Images in Augmented and Virtual Reality
+                Images Virtual Reality
             </h3>
         </div>
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="./img/Architecture/screenshot1-AR.jpg" onclick="openModal(1)">
-            <img class="slide " src="./img/Architecture/screenshot2-AR.jpg" onclick="openModal(2)">
-            <img class="slide " src="./img/Architecture/example-VR.jpg" onclick="openModal(3)">
+            <img class="slide-horizontal " src="./img/Vascular-Disieses/screenshot1-VR.png" onclick="openModal(1)">
+            <img class="slide-horizontal" src="./img/Vascular-Disieses/screenshot2-VR.png" onclick="openModal(2)">
+            <img class="slide-horizontal" src="./img/Vascular-Disieses/screenshot3-VR.png" onclick="openModal(2)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs(-1) ">&#10094;</button>
@@ -128,12 +129,12 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot1-AR.jpg"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/example-VR.jpg"
-                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Vascular-Disieses/screenshot1-VR.png"
+                    style="width: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Vascular-Disieses/screenshot2-VR.png"
+                    style="width: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Vascular-Disieses/screenshot3-VR.png"
+                    style="width: 100%;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
@@ -143,7 +144,7 @@
                 class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
                 onclick="closeModal()" style="cursor:pointer">×
             </span>
-        </div> -->
+        </div>
 
         <!-- End page content -->
     </div>
@@ -153,7 +154,7 @@
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank "
                 class="w3-hover-text-green ">w3.css</a></p>
     </footer>
-    <!-- <script src="../js/script.js"></script> -->
+    <script src="../js/script.js"></script>
     <script>
         TRANSLATION.onTranslate = function () {
             // document.querySelector('#scene').src = 'src/vascular-diseases-application.html?lang=' + TRANSLATION.currentLang;
