added target feature to projectile motion vr and adde vr interface to it

--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -200,34 +200,34 @@
 
         let currentPage = location.href;
 
-        // listen for changes
-        setInterval(function () {
-            if (currentPage != location.href) {
-                // page has changed, set new page as 'current'
-                currentPage = location.href;
+        // // listen for changes
+        // setInterval(function () {
+        //     if (currentPage != location.href) {
+        //         // page has changed, set new page as 'current'
+        //         currentPage = location.href;
 
-                changeLanguageApp();
-                console.clear();
-            }
-        }, 500);
+        //         changeLanguageApp();
+        //         console.clear();
+        //     }
+        // }, 500);
 
-        function changeLanguageApp() {
-            var language = location.search;
-            if (language.length != 0) {
-                document.getElementById("scene").src = "./src/projectile-motion-application.html" + language;
-                document.getElementById("fullscreen_link").href = ("./src/projectile-motion-application.html" + language);
-                document.getElementById("vr_link").href = ("./src/projectile-motion-application-VR.html" + language);
-                document.getElementById("ar_link").href = ("./src/projectile-motion-application-AR.html" + language);
-            }
-            else {
-                document.getElementById("scene").src = "./src/projectile-motion-application.html";
-                document.getElementById("fullscreen_link").href = ("./src/projectile-motion-application.html");
-                document.getElementById("vr_link").href = ("./src/projectile-motion-application-VR.html");
-                document.getElementById("ar_link").href = ("./src/projectile-motion-application-AR.html");
-            }
-        }
+        // function changeLanguageApp() {
+        //     var language = location.search;
+        //     if (language.length != 0) {
+        //         document.getElementById("scene").src = "./src/projectile-motion-application.html" + language;
+        //         document.getElementById("fullscreen_link").href = ("./src/projectile-motion-application.html" + language);
+        //         document.getElementById("vr_link").href = ("./src/projectile-motion-application-VR.html" + language);
+        //         document.getElementById("ar_link").href = ("./src/projectile-motion-application-AR.html" + language);
+        //     }
+        //     else {
+        //         document.getElementById("scene").src = "./src/projectile-motion-application.html";
+        //         document.getElementById("fullscreen_link").href = ("./src/projectile-motion-application.html");
+        //         document.getElementById("vr_link").href = ("./src/projectile-motion-application-VR.html");
+        //         document.getElementById("ar_link").href = ("./src/projectile-motion-application-AR.html");
+        //     }
+        // }
 
-        changeLanguageApp();
+        // changeLanguageApp();
         // ã
 
         TRANSLATION.onTranslate = function () {
