fixing projectile motion info box

--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -14,7 +14,7 @@
             overflow: hidden;
         }
 
-        .top {
+        #top {
             border-top: rgb(120, 120, 120) solid 3px;
             border-left: rgb(120, 120, 120) solid 3px;
             border-right: rgb(120, 120, 120) solid 3px;
@@ -45,7 +45,7 @@
             max-height: 22.5%;
         }
 
-        #info1 {
+        /* #info1 {
             position: absolute;
             margin-left: auto;
             margin-right: auto;
@@ -57,7 +57,7 @@
             text-align: center;
             border: rgb(120, 120, 120) solid 3px;
             max-height: 22.5%;
-        }
+        } */
 
         #vars {
             position: absolute;
@@ -97,10 +97,11 @@
         <li id="drop">Drop Box</li>
     </ul>
 
-    <div id="info1">
-        The displacement along x-axis and y-axis formulas are given below:
-    </div>
     <div id="info">
+        <div id="info1">
+            The displacement along x-axis and y-axis formulas are given below:
+        </div>
+
         $$ \Delta x = v_xt.$$
         $$ \Delta y={v}_{0y}t-\frac{1}{2}{\mathrm{gt}}^{2}\\ .$$
     </div>
