added eletric circuits project

--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
                     </div>
                 </a>
             </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="javascript: TRANSLATION.redirect('projects/circuits.html')">
+                    <div class="w3-display-container" style="border:2px solid black">
+                        <div id="circuits" class="project-title w3-display-topleft w3-padding">Eletric
+                            Circuits</div>
+                        <img src="img/projects-main-images/circuits.png" alt="example of important historical figures"
+                            style="width:100%;">
+                    </div>
+                </a>
+            </div>
         </div>
 
         <!-- External Apps Section -->
