inclined-plane pt-br fullscreen fixed

--- a/projects/inclined-plane.html
+++ b/projects/inclined-plane.html
@@ -83,9 +83,9 @@
         </div>
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="javascript: TRANSLTAION.redirect('projects/src/inclined-plane-application.html', '', true);" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/inclined-plane-application.html', '', true);">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Inclined-Plane/blur.png') center;">
+                         style="background: url('img/Inclined-Plane/blur.png') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />
