projectile-motion menu changed

--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -9,6 +9,7 @@
     <style>
         html,
         body {
+            background-color: #87CEEB;
             margin: 0;
             height: 100%;
             overflow: hidden;
@@ -26,23 +27,23 @@
         }
 
         .bottom {
-            border-left: rgb(120, 120, 120) solid 3px;
-            border-right: rgb(120, 120, 120) solid 3px;
-            border-bottom: rgb(120, 120, 120) solid 3px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         #info {
+            font-size: 0.8em;
             position: absolute;
             margin-left: auto;
             margin-right: auto;
-            left: 85%;
-            right: 5%;
-            bottom: 35px;
+            left: 81%;
+            right: auto;
+            bottom: 5px;
             background-color: rgba(220, 220, 220, 0.7);
             padding: 3px;
             text-align: center;
             border: rgb(120, 120, 120) solid 3px;
-            max-height: 25%;
+            max-height: 50%;
         }
 
         /* #info1 {
@@ -60,6 +61,7 @@
         } */
 
         #vars {
+            font-size: 1.2em;
             position: absolute;
             top: 25%;
             bottom: 25%;
@@ -68,12 +70,13 @@
         }
 
         #vars li {
-            font-size: 1.2em;
+            font-size: 0.8em;
             background-color: rgba(220, 220, 220, 0.7);
             padding: 3px;
         }
 
         #drop {
+            font-size: 0.8em;
             margin-top: 3px;
             text-align: center;
             border: rgb(120, 120, 120) solid 2px;
