projectile-motion interface changed

--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -19,6 +19,7 @@
             border-top: rgb(120, 120, 120) solid 3px;
             border-left: rgb(120, 120, 120) solid 3px;
             border-right: rgb(120, 120, 120) solid 3px;
+
         }
 
         .middle {
@@ -29,6 +30,8 @@
         .bottom {
             margin-left: auto;
             margin-right: auto;
+            width: 100;
+            display: block;
         }
 
         #info {
@@ -44,6 +47,8 @@
             text-align: center;
             border: rgb(120, 120, 120) solid 3px;
             max-height: 50%;
+            width: 100;
+            display: block;
         }
 
         /* #info1 {
@@ -64,18 +69,25 @@
             font-size: 1.2em;
             position: absolute;
             top: 25%;
-            bottom: 25%;
-            left: 83%;
+            left: 83.5%;
             list-style-type: none;
+            width: 100;
+            display: block;
         }
 
-        #vars li {
-            font-size: 0.8em;
-            background-color: rgba(220, 220, 220, 0.7);
-            padding: 3px;
-        }
+            #vars li {
+                font-size: 0.8em;
+                top: 25%;
+                bottom: 25%;
+                background-color: rgba(220, 220, 220, 0.7);
+                padding: 3px;
+                width: 100;
+                display: block;
+            }
 
         #drop {
+            width: 100;
+            display: block;
             font-size: 0.8em;
             margin-top: 3px;
             text-align: center;
